--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="nav-item"><a href="/Tricks">Articles <span class="sr-only"></span></a></li>
-                    <li><a href="/Tricks/new">Créer un article</a></li>
+                    <li><a href="/Tricks/new">Créer un article</a></li>git statu
                 </ul>
                 <ul
                     class="nav navbar-nav navbar-right">
