--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <section class="articles">
 
-        {% for article in articles %}
+        {% for article in article %}
              <article>
                 <h2>Titre de l'article</h2>
                 <div class="metadata">écrit le 238/11/2018 à 10h00 dans la catégorie Tricks</div>
