--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -7,14 +7,11 @@
 
         {% for article in article %}
              <article>
-                <h2>Titre de l'article</h2>
-                <div class="metadata">écrit le 238/11/2018 à 10h00 dans la catégorie Tricks</div>
-                <div class="content"><img src="http://placehold.it/350x150" alt="">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta fugiat impedit, laboriosam pariatur
-                    repudiandae rerum.</p>
-                     <p>Illum obcaecati provident repudiandae? Aliquid distinctio dolorem explicabo possimus quis reiciendis
-                    temporibus? Commodi necessitatibus, suscipit?</p>
-                <a href="{{ path('site_show') }}" class="btn btn-primary">Lire la suite</a></div>
+                <h2>{{ article.title }}</h2>
+                <div class="metadata">écrit le {{ article.createdAt | date('d/m/y') }} à {{ article.createdAt | date('H:i')}} dans la catégorie Tricks</div>
+                <div class="content"><img src="article.image" alt="">
+                    {{ article.content | raw }}
+                <a href="{{ path('site_show', {'id': article.id}) }}" class="btn btn-primary">Lire la suite</a></div>
              </article>
         {% endfor %}
     </section>
