--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,13 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">SnowTricks</a>
+                <a class="navbar-brand" href="{{ path('home') }}">SnowTricks</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="nav-item"><a href="{{ path("site") }}">Articles <span class="sr-only"></span></a></li>
-                    <li><a href="/Tricks/new">Créer un article</a></li>
+                    <li><a href="{{ path('site_create') }}">Créer un article</a></li>
                 </ul>
                 <ul
                     class="nav navbar-nav navbar-right">
